# superset-datafusion

./: .gitignore  Cargo.toml  Dockerfile  README-Docker.md  README.md  cleanup_and_restart.sh  docker-compose.yml  example.sql  init_superset.sh  pyproject.toml  quick_restart.sh  requierments.txt  setup.sql  setup_superset_datafusion.sh  start_with_init.sh  superset_config_datafusion.py  users.parquet
.github/workflows/: docker-image.yml
python/sqlalchemy_datafusion_pkg/: setup.py
python/sqlalchemy_datafusion_pkg/sqlalchemy_datafusion/: __init__.py  dialect.py  dialect.py.backup
python/sqlalchemy_datafusion_pkg/sqlalchemy_datafusion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/superset_datafusion/: __init__.py  engine_spec.py  engine_spec.py.backup  setup.py
python/superset_datafusion/superset_datafusion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/superset_datafusion_plugin/: __init__.py
src/: lib.rs  lib.rs.backup  lib.rs.backup2
