[package]
name = "datafusion-sqlalchemy"
version = "0.1.0"
edition = "2021"

[lib]
name = "datafusion_dbapi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
datafusion = "39"
env_logger = "0.11"
log = "0.4"


[profile.release]
lto = true
