[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "datafusion-dbapi"
version = "0.1.0"
description = "DB-API 2.0 driver backed by Apache DataFusion (Rust)"
requires-python = ">=3.8"
dependencies = ["SQLAlchemy>=1.4,<2.0"]

[tool.maturin]

module-name = "datafusion_dbapi"
